2008-07-25  Per Bothner  <per@bothner.com>

	* ReferenceExp.java (TYPE_NAME): New flag.

2008-06-20  Per Bothner  <per@bothner.com>

	* ClassExp.java (declareParts): Semi-redundantly set the outer link
	of a method.  This fixes another part of Savannah bug #23606.

2008-06-19  Per Bothner  <per@bothner.com>

	* LambdaExp.java (primBodyMethods): New field, so we don't step
	on primMethods for methods in pair classes.  This fixes a part
	of Savannah bug #23606.

	* ClassExp.java (declareParts): Check for static method.

2008-06-11  Per Bothner  <per@bothner.com>

	* InlineCalls.java (walkSetExp): New method.  Check that we don't
	try to assign to a method.
	(walkReferenceExp): Check that we don't try to access a method as a
	variable - which isn't supported yet.
	This fixes Savannah bug #23534: '"uninitialized register 10"
	(VerifyError) when accessing globals from method within
	define-simple-class'.

2008-06-01  Per Bothner  <per@bothner.com>

	* Compilation.java (javaIntegerType, scmPairType, scmNamedType):
	Remove no-longer used fields.

	* PrimProcedure.java (matchN, compileArgs): Also check for new
	LangObjType.listType.

	* Compilation.java (loadClassRef): Fix classname used when emitting
	code to load a Class not using Java5 class literals.

	* Compilation.java (defaultClassFileVersion): Fix PreProcess typo.

2008-05-31  Per Bothner  <per@bothner.com>

	* Language.java (getTypeFor): If we have a quoted Type/Class use that
	as is, rather than passing it though getTypeFor(Object,boolean).
	E.g. if someone explicitly writes a class like java.lang.String use
	the plain ClassType rather than try to map it to toStringType or
	generally a LangObjType.

2008-05-18  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (takesVarArgs): Also true if VARARGS flag set.
	* LambdaExp.java (addMethodFor): If #!rest type is Object[] and we're
	generate a JDK_1_5 or newer classfile, set VARARGS flag instead of
	appending "$V" to method name.
