@@ -58,7 +58,6 @@ java_sources = \
   PushApply.java \
   ReferenceExp.java \
   ScopeExp.java \
-  SeriesTarget.java \
   SetExp.java \
   Special.java \
   StackTarget.java \
